reinstated utils function write_json_file

--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "99d29d7e-8a26-411f-ba5b-05cda6d63adc",
    "metadata": {},
    "outputs": [],
@@ -218,12 +218,14 @@
     "        else:\n",
     "            utils.squeal(f\"Processing text {index + 1} with GPT\")\n",
     "            prompt = make_prompt(text, target_labels)\n",
-    "            texts_output.append(utils.process_text_with_gpt(openai_client, model, prompt))\n",
+    "            gpt_response = utils.process_text_with_gpt(openai_client, model, prompt)\n",
+    "            texts_output.append(gpt_response)\n",
+    "            if text not in ner_cache:\n",
+    "                ner_cache[text] = {}\n",
+    "            ner_cache[text][model] = gpt_response\n",
+    "            utils.write_json_file(NER_CACHE_FILE, ner_cache)\n",
     "    print(\"Finished processing\")\n",
-    "    utils.save_data_to_json_file({text_input: {model: text_output} \n",
-    "                                 for text_input, text_output in zip(texts_input, texts_output)},\n",
-    "                                 file_name=NER_CACHE_FILE, \n",
-    "                                 in_colab=in_colab)\n",
+    "    utils.save_data_to_json_file(ner_cache, file_name=NER_CACHE_FILE, in_colab=in_colab)\n",
     "    return texts_output"
    ]
   },
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a66bff5e-3e90-40e9-8b9b-d595661006d1",
    "metadata": {},
    "outputs": [
@@ -245,15 +247,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrieving entities for text 100 from cache\n",
+      "Processing text 3 with GPT\n",
       "Finished processing\n",
-      "️✅ Saved data to file ner_cache_82d40eb51c265a0aeac8b70d594ba71a6208024c.json\n",
+      "️✅ Saved data to file ner_cache_342e2f94cfce049222313f587d6473ad155ba980.json\n",
       "Statuette of the god [Anubis](PERSON). Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115\n"
      ]
     }
    ],
    "source": [
-    "texts_output = openai_ner(model, texts_input)\n",
+    "texts_output = openai_ner(model, texts_input[:3])\n",
     "print(texts_output[0])"
    ]
   },
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ff163088-2219-42f6-9778-c72f786e698e",
    "metadata": {},
    "outputs": [],
@@ -302,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ccdb03eb-b38d-4ee5-af7b-9676de01a335",
    "metadata": {},
    "outputs": [],
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5b7f5a6e-247d-4c2c-aeff-22023cee039f",
    "metadata": {},
    "outputs": [
@@ -339,28 +341,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "❌ Output text of named entity recognition is different from input text!\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
-       "<span style=\"border: 1px solid black; color: red;\">Sekhmet</span> was a goddess. <span style=\"border: 1px solid black; color: green;\">Thebes</span> is referenced. The object is made of granodiorite and belongs to the Drovetti collection (1824). It dates back to the New Kingdom, 18th Dynasty, during the reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span> (1390-1353 BC)."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Statuette of the goddess <span style=\"border: 1px solid black; color: red;\">Bastet</span>. Bronze. Late Period (722-332 BC).. <span style=\"border: 1px solid black; color: red;\">Drovetti</span> collection (1824). C. 271"
+       "<span style=\"border: 1px solid black; color: blue;\">Statue</span> of the goddess <span style=\"border: 1px solid black; color: red;\">Sekhmet</span>. Granodiorite. New Kingdom, 18th Dynasty, reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span> (1390-1353 BC). <span style=\"border: 1px solid black; color: green;\">Thebes</span>.. Drovetti collection (1824). C. 256"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -379,26 +362,7 @@
     {
      "data": {
       "text/html": [
-       "<span style=\"border: 1px solid black; color: red;\">Harpocrates</span>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "❌ Output text of named entity recognition is different from input text!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Statuette of the goddess <span style=\"border: 1px solid black; color: red;\">Satet</span>. Bronze. Late Period (722-332 BC). Drovetti collection (1824). C. 515"
+       "Statuette of the goddess <span style=\"border: 1px solid black; color: red;\">Bastet</span>. Bronze. Late Period (722-332 BC). Drovetti collection (1824). C. 271"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -446,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "bf595c60-2d89-4baf-83a7-e5a00c2e25f8",
    "metadata": {},
    "outputs": [
@@ -454,7 +418,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "️✅ Saved data to file output_ner_5f12fa7c16d33ea378148197569f999f774f7481.json\n"
+      "️✅ Saved data to file output_ner_926e044ee1644a31584a114a5f96ac6f44b47083.json\n"
      ]
     }
    ],
@@ -495,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "9e7a16d8-ce60-44b8-bcd7-c36bcadb508b",
    "metadata": {},
    "outputs": [],
@@ -530,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "0f77287b-d00c-4780-ac6d-1586241e7275",
    "metadata": {},
    "outputs": [],
@@ -562,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "3406011a-9d11-4dbf-bdb7-a0809530acee",
    "metadata": {},
    "outputs": [
