reinstated utils function write_json_file

--- a/notebooks/tasks/disambiguation_candidates.ipynb
+++ b/notebooks/tasks/disambiguation_candidates.ipynb
@@ -240,6 +240,7 @@
     "                                                            \"description\": candidate[\"description\"]} \n",
     "                                                            for candidate in json.loads(wikidata_data.text)[\"search\"]\n",
     "                                                            if \"description\" in candidate.keys()]\n",
+    "            utils.write_json_file(DISAMBUGUATION_CACHE_FILE_WIKIDATA, wikidata_cache)\n",
     "    print(\"Finished processing\")\n",
     "    utils.save_data_to_json_file(wikidata_cache, file_name=DISAMBUGUATION_CACHE_FILE_WIKIDATA, in_colab=in_colab)\n",
     "    for entity in entities:\n",
@@ -354,8 +355,9 @@
     "            if entity[\"text\"] not in gpt_cache[entity[\"entity_text\"]]:\n",
     "                gpt_cache[entity[\"entity_text\"]][entity[\"text\"]] = {}\n",
     "            gpt_cache[entity[\"entity_text\"]][entity[\"text\"]][model] = {key: value \n",
-    "                                                                       for key, value in entity[\"wikidata_id\"].items()\n",
-    "                                                                       if key != model}\n",
+    "                                                                       for key, value in entity[\"wikidata_id\"].items()}\n",
+    "            utils.write_json_file(DISAMBUGUATION_CACHE_FILE_GPT, gpt_cache)\n",
+    "            time.sleep(2)\n",
     "    print(\"Finished processing\")\n",
     "    utils.save_data_to_json_file(gpt_cache, file_name=DISAMBUGUATION_CACHE_FILE_GPT, in_colab=in_colab)\n",
     "    return entities"
