enabled entity table saving

--- a/notebooks/tasks/entity_linking.ipynb
+++ b/notebooks/tasks/entity_linking.ipynb
@@ -21,14 +21,19 @@
     "\n",
     "Making explicit the relations between the named entities helps us to better understand the data. In the context of museum artefact descriptions there are two major types of relations: relation between named entities among each other and relations between named entities and the artefacts. In the main data files used for testing the software, from the Egyptian Museum of Turin, the first group of relations is quite rare. Therefore we focus on finding relations/links between artefacts and the named entities in their description texts.\n",
     "\n",
-    "We use large language models (LLMs) to derive the relations. To make the task manageable, we have restricted the relations to six types:\n",
+    "We use large language models (LLMs) to derive the relations. To make the task manageable, we have restricted the relations to eleven types:\n",
     "\n",
-    "1. the artefact represents the entity\n",
-    "2. the entity represents the geographical context of the artefact\n",
-    "3. the entity represents the historical context of the artefact\n",
-    "4. the entity is related to an object or person represented in the artefact\n",
-    "5. the entity is a previous owner of the artefact\n",
-    "6. the entity is mentioned for another reason\n",
+    "1. the entity is a person depicted on or by the artefact\n",
+    "2. the entity is a person that created the artefact\n",
+    "3. the entity is a person that discovered the artefact\n",
+    "4. the entity is a person that owned the artefact\n",
+    "5. the entity is a person in power during the period of the creation of the artefact\n",
+    "6. the entity is a location depicted on or by the artefact\n",
+    "7. the entity is a location where the artefact was created\n",
+    "8. the entity is a location where the artefact was produced\n",
+    "9. the entity is a location where the artefact was discovered\n",
+    "10. the entity is the artefact's current location\n",
+    "11. other entity type or other relation between entity and artefact\n",
     "\n",
     "We include the definitions of these types in the prompt sent to the LLMs and ask them to select the best matching one. We offer each entity to the LLMs separately.\n",
     "\n",
@@ -192,20 +197,27 @@
     "\n",
     "{text}\n",
     "\n",
-    "retrieve the relationship between this artefact and the following named entity, mentioned in the description:\n",
+    "Retrieve the relationship between this artefact and the following named entity, \n",
+    "mentioned in the description:\n",
     "\n",
     "{entity}\n",
     "\n",
-    "Please answer the following question: Why is this entity mentioned in the description? Please select your answer from the following options:\n",
+    "Please answer the following question: Why is this entity mentioned in the description? \n",
+    "Please select your answer from the following options:\n",
     "\n",
-    "1. the artefact represents the entity\n",
-    "2. the entity represents the geographical context of the artefact\n",
-    "3. the entity represents the historical context of the artefact\n",
-    "4. the entity is related to an object or person represented in the artefact\n",
-    "5. the entity is a previous owner of the artefact\n",
-    "6. the entity is mentioned for another reason\n",
+    "1. the entity is a person depicted on or by the artefact\n",
+    "2. the entity is a person that created the artefact\n",
+    "3. the entity is a person that discovered the artefact\n",
+    "4. the entity is a person that owned the artefact\n",
+    "5. the entity is a person in power during the period of the creation of the artefact\n",
+    "6. the entity is a location depicted on or by the artefact\n",
+    "7. the entity is a location where the artefact was created\n",
+    "8. the entity is a location where the artefact was produced\n",
+    "9. the entity is a location where the artefact was discovered\n",
+    "10. the entity is the artefact's current location\n",
+    "11. other entity type or other relation between entity and artefact\n",
     "\n",
-    "Answer only with a number. If you choose for option 6, you  may add a clarification text\n",
+    "Answer only with a number. If you choose for option 11, you  may add a clarification text\n",
     "\"\"\""
    ]
   },
@@ -264,6 +276,7 @@
     "            if entity[\"text\"] not in linking_cache[entity[\"entity_text\"]]:\n",
     "                linking_cache[entity[\"entity_text\"]][entity[\"text\"]] = {}\n",
     "            linking_cache[entity[\"entity_text\"]][entity[\"text\"]][model] = entity[\"link\"][model]\n",
+    "            utils.write_json_file(LINKING_CACHE_FILE, linking_cache)\n",
     "    print(\"Finished processing\")\n",
     "    utils.save_data_to_json_file(linking_cache, file_name=LINKING_CACHE_FILE, in_colab=in_colab)\n",
     "    return entities"
@@ -289,7 +302,7 @@
      "text": [
       "Retrieving entity \"Bagnani\" of text 100 from cache\n",
       "Finished processing\n",
-      "️✅ Saved data to file linking_cache_123dc2598ed9928793036410b9aa30be38b190de.json\n",
+      "️✅ Saved data to file linking_cache_7d1cb217b7ded2bec61ee23fc7daae71fde7b271.json\n",
       "{'text_cleaned': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115', 'entities': [{'entity_text': 'Anubis', 'wikidata_id': 'Q47534', 'link': '1'}]}\n"
      ]
     }
@@ -312,12 +325,17 @@
     "\n",
     "We visualize the results of the linking process by displaying the numeric linking code in superscript next to the entity in its context. Please note that the six numeric codes represent the relations between the entity and the artefact and stand for the following:\n",
     "\n",
-    "1. the artefact represents the entity\n",
-    "2. the entity represents the geographical context of the artefact\n",
-    "3. the entity represents the historical context of the artefact\n",
-    "4. the entity is related to an object or person represented in the artefact\n",
-    "5. the entity is a previous owner of the artefact\n",
-    "6. the entity is mentioned for another reason"
+    "1. the entity is a person depicted on or by the artefact\n",
+    "2. the entity is a person that created the artefact\n",
+    "3. the entity is a person that discovered the artefact\n",
+    "4. the entity is a person that owned the artefact\n",
+    "5. the entity is a person in power during the period of the creation of the artefact\n",
+    "6. the entity is a location depicted on or by the artefact\n",
+    "7. the entity is a location where the artefact was created\n",
+    "8. the entity is a location where the artefact was produced\n",
+    "9. the entity is a location where the artefact was discovered\n",
+    "10. the entity is the artefact's current location\n",
+    "11. other entity type or other relation between entity and artefact"
    ]
   },
   {
@@ -341,7 +359,7 @@
     {
      "data": {
       "text/html": [
-       "<span style=\"border: 1px solid black; color: red;\">Sekhmet</span><sup>Q146104,1</sup> was a goddess. <span style=\"border: 1px solid black; color: green;\">Thebes</span><sup>Q101583,2</sup> is referenced. The object is made of granodiorite and belongs to the Drovetti collection (1824). It dates back to the New Kingdom, 18th Dynasty, during the reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span><sup>Q42606,1</sup> (1390-1353 BC)."
+       "<span style=\"border: 1px solid black; color: red;\">Sekhmet</span><sup>Q146104,1</sup> was a goddess. <span style=\"border: 1px solid black; color: green;\">Thebes</span><sup>Q101583,7</sup> is referenced. The object is made of granodiorite and belongs to the Drovetti collection (1824). It dates back to the New Kingdom, 18th Dynasty, during the reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span><sup>Q42606,5</sup> (1390-1353 BC)."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -389,18 +407,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "️✅ Saved data to file output_linking.ipynb\n"
+      "️✅ Saved data to file output_linking_34e26bfd19c837e400a5fcb214cd1e7a25304a12.json\n"
      ]
     }
    ],
    "source": [
-    "utils.save_data_to_json_file(texts_output, file_name=\"output_linking.ipynb\", in_colab=in_colab)"
+    "utils.save_data_to_json_file(texts_output, file_name=\"output_linking.json\", in_colab=in_colab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "44dec570-a51e-4822-8e14-50dbfc2bea01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "️✅ Saved data to file entities_table.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "utils.save_entities_as_table(\"entities_table.csv\", texts_output)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afb00f7b-dcf6-4b0b-b756-aa8b39494958",
+   "id": "79011006-ae4a-4129-9d75-3f34e7b45a65",
    "metadata": {},
    "outputs": [],
    "source": []
