--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "99d29d7e-8a26-411f-ba5b-05cda6d63adc",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a66bff5e-3e90-40e9-8b9b-d595661006d1",
    "metadata": {},
    "outputs": [
@@ -247,15 +247,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing text 3 with GPT\n",
+      "Retrieving entities for text 100 from cache\n",
       "Finished processing\n",
-      "️✅ Saved data to file ner_cache_342e2f94cfce049222313f587d6473ad155ba980.json\n",
+      "️✅ Saved data to file ner_cache_82d40eb51c265a0aeac8b70d594ba71a6208024c.json\n",
       "Statuette of the god [Anubis](PERSON). Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115\n"
      ]
     }
    ],
    "source": [
-    "texts_output = openai_ner(model, texts_input[:3])\n",
+    "texts_output = openai_ner(model, texts_input)\n",
     "print(texts_output[0])"
    ]
   },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ff163088-2219-42f6-9778-c72f786e698e",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "ccdb03eb-b38d-4ee5-af7b-9676de01a335",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "5b7f5a6e-247d-4c2c-aeff-22023cee039f",
    "metadata": {},
    "outputs": [
@@ -332,18 +332,6 @@
      "data": {
       "text/html": [
        "Statuette of the god <span style=\"border: 1px solid black; color: red;\">Anubis</span>. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"border: 1px solid black; color: blue;\">Statue</span> of the goddess <span style=\"border: 1px solid black; color: red;\">Sekhmet</span>. Granodiorite. New Kingdom, 18th Dynasty, reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span> (1390-1353 BC). <span style=\"border: 1px solid black; color: green;\">Thebes</span>.. Drovetti collection (1824). C. 256"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -362,7 +350,57 @@
     {
      "data": {
       "text/html": [
-       "Statuette of the goddess <span style=\"border: 1px solid black; color: red;\">Bastet</span>. Bronze. Late Period (722-332 BC). Drovetti collection (1824). C. 271"
+       "<span style=\"border: 1px solid black; color: red;\">Sekhmet</span> was a goddess. <span style=\"border: 1px solid black; color: green;\">Thebes</span> is referenced. The object is made of granodiorite and belongs to the Drovetti collection (1824). It dates back to the New Kingdom, 18th Dynasty, during the reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span> (1390-1353 BC)."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Statuette of the goddess <span style=\"border: 1px solid black; color: red;\">Bastet</span>. Bronze. Late Period (722-332 BC).. <span style=\"border: 1px solid black; color: red;\">Drovetti</span> collection (1824). C. 271"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ Output text of named entity recognition is different from input text!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"border: 1px solid black; color: red;\">Harpocrates</span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ Output text of named entity recognition is different from input text!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Statuette of the goddess <span style=\"border: 1px solid black; color: red;\">Satet</span>. Bronze. Late Period (722-332 BC). Drovetti collection (1824). C. 515"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -410,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "bf595c60-2d89-4baf-83a7-e5a00c2e25f8",
    "metadata": {},
    "outputs": [
@@ -418,7 +456,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "️✅ Saved data to file output_ner_926e044ee1644a31584a114a5f96ac6f44b47083.json\n"
+      "️✅ Saved data to file output_ner_5f12fa7c16d33ea378148197569f999f774f7481.json\n"
      ]
     }
    ],
@@ -459,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "9e7a16d8-ce60-44b8-bcd7-c36bcadb508b",
    "metadata": {},
    "outputs": [],
@@ -494,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "0f77287b-d00c-4780-ac6d-1586241e7275",
    "metadata": {},
    "outputs": [],
@@ -526,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "3406011a-9d11-4dbf-bdb7-a0809530acee",
    "metadata": {},
    "outputs": [
