fixed colab environment bug

--- a/notebooks/tasks/disambiguation_candidates.ipynb
+++ b/notebooks/tasks/disambiguation_candidates.ipynb
@@ -62,15 +62,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8fb2b75-48c8-4336-b647-d7b9bbedb631",
+   "id": "fa2747d7-d0fe-411b-9d2c-31dbf5f9b179",
    "metadata": {},
    "source": [
-    "First we import standard libraries which should always be available"
+    "We start with checking if the notebook is running on Google Colab. If that is the case, we need to connect to the notebook's environment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "d08dc054-f637-4a0d-b244-6858a5888fb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not running on Google Colab\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "def check_notebook_environment_on_colab():\n",
+    "    \"\"\"Test if run on Colab, if so test in environment is available, if not install it\"\"\"\n",
+    "    try:\n",
+    "        from google.colab import files\n",
+    "        try:\n",
+    "            os.chdir(\"/content/llm-lod-enriching-heritage/notebooks/tasks\")\n",
+    "            print(\"Found notebook environment\")\n",
+    "        except:\n",
+    "            print(\"notebook environment not found, installing...\")\n",
+    "            !git clone https://github.com/pelagios/llm-lod-enriching-heritage.git\n",
+    "            os.chdir(\"/content/llm-lod-enriching-heritage/notebooks/tasks\")\n",
+    "    except:\n",
+    "        print(\"Not running on Google Colab\")\n",
+    "\n",
+    "check_notebook_environment_on_colab()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8fb2b75-48c8-4336-b647-d7b9bbedb631",
+   "metadata": {},
+   "source": [
+    "Next we import standard libraries which should always be available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "37a02df6",
    "metadata": {},
    "outputs": [],
@@ -94,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "684d7adb-4839-49be-9a32-3b0fa15700e9",
    "metadata": {},
    "outputs": [],
@@ -115,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2751ca67-3c31-4a56-ab87-532231cb80de",
    "metadata": {},
    "outputs": [],
@@ -135,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e9f3d702-647d-4c64-acab-8da3028f7acb",
    "metadata": {},
    "outputs": [
@@ -177,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "495787e4-d72b-43c4-9834-dbd65174cef1",
    "metadata": {},
    "outputs": [],
@@ -206,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c4087c95-0ee6-4b3e-865e-1258c7d4fbfc",
    "metadata": {},
    "outputs": [],
@@ -221,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "31eaf53f-ce28-4125-81bd-567a3ab793fd",
    "metadata": {},
    "outputs": [],
@@ -258,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2df11bef-291b-4dab-b907-8291370ebff4",
    "metadata": {},
    "outputs": [
@@ -298,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "01eb98d1-f840-48fb-a342-fbe992323e2a",
    "metadata": {},
    "outputs": [],
@@ -328,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "75deea80-7bab-41cf-b0ac-fb4217c3010a",
    "metadata": {},
    "outputs": [],
@@ -337,8 +379,6 @@
     "model = \"gpt-4o-mini\"\n",
     "\n",
     "def openai_wikidata_id_selection(model, entities):\n",
-    "    openai_api_key = utils.get_openai_api_key()\n",
-    "    openai_client = utils.connect_to_openai(openai_api_key)\n",
     "    gpt_cache = utils.read_json_file(DISAMBUGUATION_CACHE_FILE_GPT)\n",
     "    for entity in entities:\n",
     "        if (entity[\"entity_text\"] in gpt_cache and \n",
@@ -347,6 +387,9 @@
     "            utils.squeal(f\"Retrieving entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} from cache\")\n",
     "            entity[\"wikidata_id\"] = gpt_cache[entity[\"entity_text\"]][entity[\"text\"]][model] | {\"model\": model}\n",
     "        else:\n",
+    "            if openai_client not in vars():\n",
+    "                openai_api_key = utils.get_openai_api_key()\n",
+    "                openai_client = utils.connect_to_openai(openai_api_key)                \n",
     "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to GPT\")\n",
     "            prompt = make_prompt(entity[\"entity_text\"], entity[\"text\"], entity[\"candidates\"])\n",
     "            entity[\"wikidata_id\"] = {model: utils.process_text_with_gpt(openai_client, model, prompt)}\n",
@@ -365,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f2cf750e-8af4-40c3-9951-bb32b5df2da3",
    "metadata": {},
    "outputs": [],
@@ -394,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "61717672-8733-4f59-b564-b060e5e88ee8",
    "metadata": {},
    "outputs": [
@@ -435,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "867bafc8-2fce-4d03-a8db-9f9296b1f16d",
    "metadata": {},
    "outputs": [
@@ -494,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "3db2ed8b-d12b-4945-b749-446c0f8b476d",
    "metadata": {},
    "outputs": [
