--- a/notebooks/tasks/entity_linking.ipynb
+++ b/notebooks/tasks/entity_linking.ipynb
@@ -70,15 +70,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f735231-ad73-4158-aefe-4935532f3a90",
+   "id": "3e12c27a-f315-41c9-8889-24ccb2958cc5",
    "metadata": {},
    "source": [
-    "First we import standard libraries which should always be available"
+    "We start with checking if the notebook is running on Google Colab. If that is the case, we need to connect to the notebook's environment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "0b5e2053-c423-40ab-99bb-c0e280acf97f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not running on Google Colab\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "def check_notebook_environment_on_colab():\n",
+    "    \"\"\"Test if run on Colab, if so test in environment is available, if not install it\"\"\"\n",
+    "    try:\n",
+    "        from google.colab import files\n",
+    "        try:\n",
+    "            os.chdir(\"/content/llm-lod-enriching-heritage/notebooks/tasks\")\n",
+    "            print(\"Found notebook environment\")\n",
+    "        except:\n",
+    "            print(\"notebook environment not found, installing...\")\n",
+    "            !git clone https://github.com/pelagios/llm-lod-enriching-heritage.git\n",
+    "            os.chdir(\"/content/llm-lod-enriching-heritage/notebooks/tasks\")\n",
+    "    except:\n",
+    "        print(\"Not running on Google Colab\")\n",
+    "\n",
+    "check_notebook_environment_on_colab()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f735231-ad73-4158-aefe-4935532f3a90",
+   "metadata": {},
+   "source": [
+    "Next we import standard libraries which should always be available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "4fd95fe3-bc47-413d-9e37-274820524903",
    "metadata": {},
    "outputs": [],
@@ -102,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "78ef6754-ccb7-40dc-ad6f-4064b93b1f0e",
    "metadata": {},
    "outputs": [],
@@ -123,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1471a3c9-2f1c-45ca-aa3c-7c47cbb12f29",
    "metadata": {},
    "outputs": [],
@@ -143,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "89a5f46e-2cd4-4761-9ab9-4e64259dc259",
    "metadata": {},
    "outputs": [
@@ -185,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5504175d-8caf-4917-b181-5f449cc7f4e6",
    "metadata": {},
    "outputs": [],
@@ -223,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9fd0b672-7c62-4cdc-9e92-80c1a6f2f31b",
    "metadata": {},
    "outputs": [],
@@ -244,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2e34a6d1-e14f-4230-8a1e-55a068c0c2aa",
    "metadata": {},
    "outputs": [],
@@ -254,8 +296,6 @@
     "\n",
     "\n",
     "def openai_link_suggestion(model, texts_input):\n",
-    "    openai_api_key = utils.get_openai_api_key()\n",
-    "    openai_client = utils.connect_to_openai(openai_api_key)\n",
     "    entities = utils.extract_entities_from_ner_input(texts_input)\n",
     "    linking_cache = utils.read_json_file(LINKING_CACHE_FILE)\n",
     "    for entity in entities:\n",
@@ -266,6 +306,9 @@
     "            if \"link\" not in entity: entity[\"link\"] = {}\n",
     "            entity[\"link\"][model] = linking_cache[entity[\"entity_text\"]][entity[\"text\"]][model]\n",
     "        else:\n",
+    "            if openai_client not in vars():\n",
+    "                openai_api_key = utils.get_openai_api_key()\n",
+    "                openai_client = utils.connect_to_openai(openai_api_key)                \n",
     "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to GPT\")\n",
     "            time.sleep(1)\n",
     "            prompt = make_linking_prompt(entity[\"entity_text\"], entity[\"text\"])\n",
@@ -292,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "30bd265f-5c55-42b4-9f06-b603a024e592",
    "metadata": {},
    "outputs": [
@@ -340,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "460020ff-a77c-45ad-a9c5-456f9608e074",
    "metadata": {},
    "outputs": [
@@ -399,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "09bad32c-1c93-4d99-b6a1-9896acda1676",
    "metadata": {},
    "outputs": [
@@ -417,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "44dec570-a51e-4822-8e14-50dbfc2bea01",
    "metadata": {},
    "outputs": [
