--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -57,15 +57,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "649c95e6-d75d-4394-904c-6d3819d07f67",
+   "id": "58abc2ca-a2c2-44cc-a239-75f2bac7229d",
    "metadata": {},
    "source": [
-    "First we import standard libraries which should always be available"
+    "We start with checking if the notebook is running on Google Colab. If that is the case, we need to connect to the notebook's environment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "71f10f8d-d0e1-40e0-a896-336c3d0567b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not running on Google Colab\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "def check_notebook_environment_on_colab():\n",
+    "    \"\"\"Test if run on Colab, if so test in environment is available, if not install it\"\"\"\n",
+    "    try:\n",
+    "        from google.colab import files\n",
+    "        try:\n",
+    "            os.chdir(\"/content/llm-lod-enriching-heritage/notebooks/tasks\")\n",
+    "            print(\"Found notebook environment\")\n",
+    "        except:\n",
+    "            print(\"notebook environment not found, installing...\")\n",
+    "            !git clone https://github.com/pelagios/llm-lod-enriching-heritage.git\n",
+    "            os.chdir(\"/content/llm-lod-enriching-heritage/notebooks/tasks\")\n",
+    "    except:\n",
+    "        print(\"Not running on Google Colab\")\n",
+    "\n",
+    "check_notebook_environment_on_colab()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "649c95e6-d75d-4394-904c-6d3819d07f67",
+   "metadata": {},
+   "source": [
+    "Next we import standard libraries which should always be available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "37f5ff2d-7192-4487-9ed1-c02abcbccf83",
    "metadata": {},
    "outputs": [],
@@ -92,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "51cef27a-cca0-45b9-a20d-893b3bf0ae38",
    "metadata": {},
    "outputs": [],
@@ -111,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1b0f1136-7f0c-47a4-8aaf-ce819ebcf45b",
    "metadata": {},
    "outputs": [],
@@ -131,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f01e81fa-5a4a-4ed3-abfd-4008f645dac4",
    "metadata": {},
    "outputs": [
@@ -175,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f4c2434c-50a4-4c1f-82a2-610fad9d247d",
    "metadata": {},
    "outputs": [],
@@ -197,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "99d29d7e-8a26-411f-ba5b-05cda6d63adc",
    "metadata": {},
    "outputs": [],
@@ -207,8 +249,6 @@
     "NER_CACHE_FILE = \"ner_cache.json\"\n",
     "\n",
     "def openai_ner(model, texts_input):\n",
-    "    openai_api_key = utils.get_openai_api_key()\n",
-    "    openai_client = utils.connect_to_openai(openai_api_key)\n",
     "    ner_cache = utils.read_json_file(NER_CACHE_FILE)\n",
     "    texts_output = []\n",
     "    for index, text in enumerate(texts_input):\n",
@@ -216,6 +256,9 @@
     "            utils.squeal(f\"Retrieving entities for text {index + 1} from cache\")\n",
     "            texts_output.append(ner_cache[text][model])\n",
     "        else:\n",
+    "            if openai_client not in vars():\n",
+    "                openai_api_key = utils.get_openai_api_key()\n",
+    "                openai_client = utils.connect_to_openai(openai_api_key)                \n",
     "            utils.squeal(f\"Processing text {index + 1} with GPT\")\n",
     "            prompt = make_prompt(text, target_labels)\n",
     "            gpt_response = utils.process_text_with_gpt(openai_client, model, prompt)\n",
@@ -239,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a66bff5e-3e90-40e9-8b9b-d595661006d1",
    "metadata": {},
    "outputs": [
@@ -279,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ff163088-2219-42f6-9778-c72f786e698e",
    "metadata": {},
    "outputs": [],
@@ -304,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ccdb03eb-b38d-4ee5-af7b-9676de01a335",
    "metadata": {},
    "outputs": [],
@@ -324,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5b7f5a6e-247d-4c2c-aeff-22023cee039f",
    "metadata": {},
    "outputs": [
@@ -448,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "bf595c60-2d89-4baf-83a7-e5a00c2e25f8",
    "metadata": {},
    "outputs": [
@@ -497,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "9e7a16d8-ce60-44b8-bcd7-c36bcadb508b",
    "metadata": {},
    "outputs": [],
@@ -532,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "0f77287b-d00c-4780-ac6d-1586241e7275",
    "metadata": {},
    "outputs": [],
@@ -564,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "3406011a-9d11-4dbf-bdb7-a0809530acee",
    "metadata": {},
    "outputs": [
