fixed colab load openai_api_key

--- a/notebooks/tasks/entity_linking.ipynb
+++ b/notebooks/tasks/entity_linking.ipynb
@@ -94,7 +94,7 @@
     "import os\n",
     "\n",
     "def check_notebook_environment_on_colab():\n",
-    "    \"\"\"Test if run on Colab, if so test in environment is available, if not install it\"\"\"\n",
+    "    \"\"\"Test if run on Colab, if so test if environment is available, if not install it\"\"\"\n",
     "    try:\n",
     "        from google.colab import files\n",
     "        try:\n",
@@ -306,7 +306,7 @@
     "            if \"link\" not in entity: entity[\"link\"] = {}\n",
     "            entity[\"link\"][model] = linking_cache[entity[\"entity_text\"]][entity[\"text\"]][model]\n",
     "        else:\n",
-    "            if openai_client not in vars():\n",
+    "            if \"openai_client\" not in vars():\n",
     "                openai_api_key = utils.get_openai_api_key()\n",
     "                openai_client = utils.connect_to_openai(openai_api_key)                \n",
     "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to GPT\")\n",
