--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -81,7 +81,7 @@
     "import os\n",
     "\n",
     "def check_notebook_environment_on_colab():\n",
-    "    \"\"\"Test if run on Colab, if so test in environment is available, if not install it\"\"\"\n",
+    "    \"\"\"Test if run on Colab, if so test if environment is available, if not install it\"\"\"\n",
     "    try:\n",
     "        from google.colab import files\n",
     "        try:\n",
@@ -256,7 +256,7 @@
     "            utils.squeal(f\"Retrieving entities for text {index + 1} from cache\")\n",
     "            texts_output.append(ner_cache[text][model])\n",
     "        else:\n",
-    "            if openai_client not in vars():\n",
+    "            if \"openai_client\" not in vars():\n",
     "                openai_api_key = utils.get_openai_api_key()\n",
     "                openai_client = utils.connect_to_openai(openai_api_key)                \n",
     "            utils.squeal(f\"Processing text {index + 1} with GPT\")\n",
@@ -292,7 +292,7 @@
      "text": [
       "Retrieving entities for text 100 from cache\n",
       "Finished processing\n",
-      "️✅ Saved data to file ner_cache_82d40eb51c265a0aeac8b70d594ba71a6208024c.json\n",
+      "️✅ Saved data to file ner_cache_4289af1c351fcc39eb45597ea7cc56f519f41107.json\n",
       "Statuette of the god [Anubis](PERSON). Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115\n"
      ]
     }
