--- a/notebooks/tasks/disambiguation_candidates.ipynb
+++ b/notebooks/tasks/disambiguation_candidates.ipynb
@@ -86,7 +86,7 @@
     "import os\n",
     "\n",
     "def check_notebook_environment_on_colab():\n",
-    "    \"\"\"Test if run on Colab, if so test in environment is available, if not install it\"\"\"\n",
+    "    \"\"\"Test if run on Colab, if so test if environment is available, if not install it\"\"\"\n",
     "    try:\n",
     "        from google.colab import files\n",
     "        try:\n",
@@ -387,7 +387,7 @@
     "            utils.squeal(f\"Retrieving entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} from cache\")\n",
     "            entity[\"wikidata_id\"] = gpt_cache[entity[\"entity_text\"]][entity[\"text\"]][model] | {\"model\": model}\n",
     "        else:\n",
-    "            if openai_client not in vars():\n",
+    "            if \"openai_client\" not in vars():\n",
     "                openai_api_key = utils.get_openai_api_key()\n",
     "                openai_client = utils.connect_to_openai(openai_api_key)                \n",
     "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to GPT\")\n",
